--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,4 +2,4 @@ displayName=Flip Smart
 author=Your Name
 description=Analyzes and highlights profitable flipping items in inventory using the Flip Smart API
 tags=grand exchange,flipping,trading,money making,profit
-plugins=com.flippingtool.FlippingToolPlugin
+plugins=com.flipsmart.FlipSmartPlugin
