Updating the author details

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=Flip Smart
-author=Your Name
-description=Analyzes and highlights profitable flipping items in inventory using the Flip Smart API
-tags=grand exchange,flipping,trading,money making,profit
+author=Flip Smart Team
+description=Provides a comprehensive tool for flipping items in the Grand Exchange
+tags=grand exchange,flipping,trading,money making,profit,flip finder
 plugins=com.flipsmart.FlipSmartPlugin
