Addressing feedback from the runelite plugin reviewers

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -3,3 +3,4 @@ author=Flip Smart Team
 description=Provides a comprehensive tool for flipping items in the Grand Exchange
 tags=grand exchange,flipping,trading,money making,profit,flip finder
 plugins=com.flipsmart.FlipSmartPlugin
+warning=This plugin tracks your grand exchange transactions and account wealth on a 3rd party server that is not controlled or verified by the RuneLite Developers. These settings can be toggled on and off in the plugin settings.
